; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_main-conf.c_ARRAY.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_main-conf.c_ARRAY.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @ARRAY to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ARRAY(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i8* @strchr(i8* %5, i8 signext 91)
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

10:                                               ; preds = %1
  %11 = load i8*, i8** %4, align 8
  %12 = getelementptr inbounds i8, i8* %11, i32 1
  store i8* %12, i8** %4, align 8
  br label %13

13:                                               ; preds = %10
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @parseInt(i8* %14)
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %9
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @parseInt(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
